# Quacken

./: .gitignore  README.md  flake.nix  index.html  quacken_flex.FCStd
.github/workflows/: build-user-config.yml  build.yml
ergogen/: config.yaml
ergogen/footprints/: choc_but_better.js  cirque.js  column_track.js  dummy_cirque.js  outline.js  qwiic.js  usb_c.js
firmware/: Cargo.toml  README.md
firmware/src/: layout.rs  main.rs  zero.rs
flex/: Keyboards.kicad_sym  quacken-top-pos.csv  quacken.kicad_pcb  quacken.kicad_pro  quacken.kicad_sch  quacken.step  sym-lib-table
flex/keyboard.pretty/: Choc_Switch.kicad_mod  Choc_Switch_Median.kicad_mod  Cirque.kicad_mod  MedianPosition.kicad_mod  Outline.kicad_mod  PCAL6524HEHZ.kicad_mod  PG1350.kicad_mod  TRRS-PJ-320A-dual.kicad_mod  TentingPuck.kicad_mod  rotary_encoder.kicad_mod  small_smd_switch.kicad_mod
flex/production/: bom.csv  bom_1.csv  designators.csv  netlist.ipc  positions.csv  positions_patched.csv  positions_patched_old.csv
flex/production/test/: quacken-B_Cu.gbl  quacken-B_Mask.gbs  quacken-B_Paste.gbp  quacken-B_Silkscreen.gbo  quacken-Edge_Cuts.gm1  quacken-F_Cu.gtl  quacken-F_Mask.gts  quacken-F_Paste.gtp  quacken-F_Silkscreen.gto  quacken-NPTH-drl_map.gbr  quacken-NPTH.drl  quacken-PTH-drl_map.gbr  quacken-PTH.drl
freecad/: quacken_flex-Mono 3_6.dxf
kicad_3dshapes/: C2911838-0.5K-DX-12PWB.step  C2911838.FCStd  PJ-320A.FCStd  PJ-320A.step
output/pcbs/: quacken_zero.kicad_pro
